--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.12.1",
-    "dayjs": "^1.6.7",
+    "dayjs": "^1.7.8",
     "element-ui": "^2.4.4",
     "flex.css": "^1.1.7",
     "fuse.js": "^3.2.1",
@@ -25,6 +25,7 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "lowdb": "^1.0.0",
+    "mavon-editor": "^2.6.17",
     "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
     "qs": "^6.6.0",
@@ -32,7 +33,6 @@
     "ua-parser-js": "^0.7.18",
     "vue": "^2.5.17",
     "vue-i18n": "^7.4.2",
-    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
