--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ VUE_APP_TITLE=vineo 后端管理平台
 
 # 网络请求公用地址
 VUE_APP_API=https://api.vineo.cn/v1
-VUE_IMAGE_URL=''
+VUE_IMAGE_URL=http://127.0.0.1:7001/public/upload/
