--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,6 @@
 # 页面 title 前缀
 VUE_APP_TITLE=vineo 后端管理平台 Dev
 
-VUE_APP_API=/api/
+VUE_APP_API=/api/v1/
 
 VUE_IMAGE_URL=http://127.0.0.1:7001/public/upload/
